Fix: Icon button too small to trigger

--- a/src/Console/Console.scss
+++ b/src/Console/Console.scss
@@ -6,30 +6,36 @@
             position: absolute;
             left: 0;
             top: 0;
-            padding: 10px;
+            padding: 10px 10px 10px 40px;
             background: #fff;
             height: 40px;
             line-height: 20px;
             width: 100%;
             .icon-blocked, .icon-info {
+                display: inline-block;
                 color: $gray;
-                position: relative;
-                top: 2px;
+                padding: 5px;
+                font-size: 16px;
+                position: absolute;
+                top: 8px;
                 &:active {
                     color: $gray-light;
                 }
             }
             .icon-blocked {
-                margin-right: 10px;
+                left: 10px;
             }
             .icon-info {
-                float: right;
+                right: 10px;
             }
             .filter {
                 color: $gray;
                 margin: 0 1px;
                 font-size: 12px;
-                padding: 4px;
+                height: 20px;
+                display: inline-block;
+                padding: 0 4px;
+                line-height: 20px;
                 border-radius: 4px;
                 &.active {
                     background: $gray;
