--- a/src/Resources/Resources.scss
+++ b/src/Resources/Resources.scss
@@ -85,6 +85,8 @@
                 word-break: break-all;
                 .icon-bin {
                     color: $red-dark;
+                    display: inline-block;
+                    padding: 5px;
                 }
                 &.key {
                     white-space: nowrap;
